--- a/demo-app/overlays/dev/Deployment.yaml
+++ b/demo-app/overlays/dev/Deployment.yaml
@@ -1,10 +1,6 @@
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: whoami
 spec:
   replicas: 2
-  template:
-    spec:
-      containers:
-      - name: whoami
