--- a/demo-app/base/Deployment.yaml
+++ b/demo-app/base/Deployment.yaml
@@ -1,27 +1,33 @@
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: whoami
-  labels:
-    app: whoami
 spec:
-  replicas: 1
-  minReadySeconds: 10
   selector:
     matchLabels:
       app: whoami
-      release: whoami
   template:
     metadata:
       labels:
         app: whoami
-        release: whoami
     spec:
       containers:
       - name: whoami
-        image: "traefik/whoami"
-        imagePullPolicy: IfNotPresent
+        image: traefik/whoami
         ports:
-        - name: http
-          containerPort: 80
-          protocol: TCP
+        - containerPort: 80
+        # readinessProbe:
+        #   periodSeconds: 5
+        #   tcpSocket:
+        #     port: 6379
+        # livenessProbe:
+        #   periodSeconds: 5
+        #   tcpSocket:
+        #     port: 6379
+        resources:
+          limits:
+            memory: 256Mi
+            cpu: 200m
+          requests:
+            cpu: 100m
+            memory: 200Mi
