--- a/demo-app/overlays/dev/kustomization.yaml
+++ b/demo-app/overlays/dev/kustomization.yaml
@@ -1,4 +1,8 @@
-bases:
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+resources:
 - ../../base
-patchesStrategicMerge:
-- Deployment.yaml
+
+patches:
+- path: Deployment.yaml
